--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github API</title>
+    <title>JS n° 9 : Github API</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
